--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "evento-laburatorio-pescar": "file:",
     "tailwindcss": "^4.1.7"
   }
 }
